--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="w-100 overflow-hidden bg-gray-100  position-relative" id="top">
   
 <div class="">
-  <div class="col-12 col-lg-12 mt-0 h-100 position-absolute top-0 end-0 bg-cover" data-aos="fade-left" style="background-image: url(img/webp/fondo_test.jpeg);">
+  <div class="col-12 col-lg-12 mt-0 h-100 position-absolute top-0 end-0 bg-cover foto-banner" data-aos="fade-left" style="background-image: url(img/webp/fondo_test.jpeg);">
     
   </div>
     <div class="row">
