--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="description" content="¡Celebremos el amor! Únete a nosotros en nuestra boda en un hermoso paraíso. Detalles, fotos y más aquí.">
   <meta property="og:title" content="¡Nuestra Boda! - Dani y Facu">
   <meta property="og:description" content="¡Celebremos! Unite a nosotros en nuestra boda. Detalles, fotos y más aca.">
-  <meta property="og:image" content="https://bodadanifacu.com.ar/img/webp/20230930-ROL_7855.jpg">
+  <meta property="og:image" content="https://bodadanifacu.com.ar/img/foto-compartir.jpg">
   <meta property="og:url" content="https://bodadanifacu.com.ar/">
   <meta property="og:type" content="website">
   <link rel="stylesheet" href="css/theme.min.css">
@@ -172,15 +172,15 @@
       <div class="row vw-100 px-0 py-vh-5 d-flex align-items-center scrollx">
 
         <div class="col-md-3" data-aos="fade-up" data-aos-delay="200">
-            <img src="img/webp/20230930-ROL_7855.jpg" class="img-fluid rounded shadow" alt="nice gallery image" width="1164" height="776">
+            <img src="img/webp/imagecompressor/20230930-ROL_7855-min.jpg" class="img-fluid rounded shadow" alt="nice gallery image" width="1164" height="776">
         </div>
 
         <div class="col-md-3" data-aos="fade-up" data-aos-delay="400">
-            <img src="img/webp/20230930-ROL_7868.jpg" class="img-fluid rounded shadow" alt="nice gallery image" width="844" height="1054">
+            <img src="img/webp/imagecompressor/20230930-ROL_7868-min.jpg" class="img-fluid rounded shadow" alt="nice gallery image" width="844" height="1054">
         </div>
 
         <div class="col-md-3" data-aos="fade-up" data-aos-delay="600">
-            <img src="img/webp/20230930-ROL_7857.jpg" class="img-fluid rounded shadow" alt="nice gallery image" width="844" height="562">
+            <img src="img/webp/imagecompressor/20230930-ROL_7857-min.jpg" class="img-fluid rounded shadow" alt="nice gallery image" width="844" height="562">
         </div>
         <div class="col-md-3" data-aos="fade-up">
           <img src="img/webp/foto3.jpg" class="rounded shadow img-fluid" alt="nice gallery image" width="512" height="341">
