--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
   <head>
       <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-  <meta name="description" content="A growing collection of ready to use components for the CSS framework Bootstrap 5">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/26_85279.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="img/26_85279.ico">
   <link rel="icon" type="image/png" sizes="16x16" href="img/26_85279.ico">
   <link rel="icon" type="image/png" sizes="96x96" href="img/26_85279.ico">
   <meta name="author" content="Facundo Fernandez">
   <title>Boda Dani & Facu </title>
-  <meta name="description" content="¡Celebremos el amor! Únete a nosotros en nuestra boda en un hermoso paraíso. Detalles, fotos y más aquí.">
+  <meta name="description" content="¡Celebremos! Unite a nosotros en nuestra boda. Detalles, fotos y más aca.">
   <meta property="og:title" content="¡Nuestra Boda! - Dani y Facu">
   <meta property="og:description" content="¡Celebremos! Unite a nosotros en nuestra boda. Detalles, fotos y más aca.">
-  <meta property="og:image" content="https://bodadanifacu.com.ar/img/foto-compartir.jpg">
+  <meta property="og:image" content="https://bodadanifacu.com.ar/img/foto-compartir2.jpg">
   <meta property="og:url" content="https://bodadanifacu.com.ar/">
   <meta property="og:type" content="website">
   <link rel="stylesheet" href="css/theme.min.css">
