--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 <div class="col-lg-4">
   <i class="icono fa-solid fa-location-dot"></i>
   <h3 class="py-4 border-top border-dark title" data-aos="fade-left">¿DONDE ES LA FIESTA?</h3>
-  <p data-aos="fade-left" data-aos-delay="200">RAQUEL ESPAÑOL 325</p>
-  <p data-aos="fade-left" data-aos-delay="200">WILDE</p>
-  <p data-aos="fade-left" data-aos-delay="200">21:00 HRS</p>
+  <p data-aos="fade-left" data-aos-delay="200">SALÓN DEL CARMEN</p>
+  <p data-aos="fade-left" data-aos-delay="200">RAQUEL ESPAÑOL 325, WILDE</p>
+  <p data-aos="fade-left" data-aos-delay="200">20:00 HRS</p>
 
   <p>
   <a href="https://maps.app.goo.gl/1TSf9m9SfN7vFecb8" target="_blank" class="btn btn-primary btn-xl shadow me-3 btn-llegar" data-aos="fade-left" data-aos-delay="400">COMO LLEGAR</a>
@@ -205,7 +205,8 @@
           <h1 class="display-1 fw-bold">¿venís?</h1>
           <p>Esperamos que puedas acompañarnos en este momento tan especial</p>
           <div class="agendar w-100">
-            <a href="https://forms.gle/BDUhkNagkBCZtuVG9" target="_blank">
+            <!--<a href="https://forms.gle/BDUhkNagkBCZtuVG9" target="_blank">-->
+              <a target="_blank" href="https://api.whatsapp.com/send?phone=5491169592059&text=Hola%20👋!%20¡Claro%20que%20sí!%20Ahí%20estaremos%20para%20celebrar%su%20día%20especial%20🥂">
               CONFIRMAR ASISTENCIA
             </a>
           </div>
@@ -221,6 +222,7 @@
     <div class="position-relative bg-cover text-white text-center bp-center">
     <div class="container">
       <div class="row py-vh-5 position-relative d-flex justify-content-center align-items-center">
+        <i class="icon-regalo fa-solid fa-gift fa-shake"></i>
         <div class="col-10 mt-5">
           <p>Lo que más queremos es compartir con vos nuestro gran día, pero si deseas regalarnos algo podés hacer clic en el siguiente botón</p>
           <div class="w-100">
