--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
           <p>Esperamos que puedas acompañarnos en este momento tan especial</p>
           <div class="agendar w-100">
             <!--<a href="https://forms.gle/BDUhkNagkBCZtuVG9" target="_blank">-->
-              <a target="_blank" href="https://api.whatsapp.com/send?phone=5491169592059&text=Hola%20👋!%20¡Claro%20que%20sí!%20Ahí%20estaremos%20para%20celebrar%su%20día%20especial%20🥂">
-              CONFIRMAR ASISTENCIA
-            </a>
+              <a target="_blank" href="https://api.whatsapp.com/send?phone=5491169592059&amp;text=Hola%20%F0%9F%91%8B!%20%C2%A1Claro%20que%20s%C3%AD!%20Ah%C3%AD%20estaremos%20para%20celebrar%20este%20d%C3%ADa%20especial%20%F0%9F%A5%82">
+                CONFIRMAR ASISTENCIA
+              </a>
           </div>
         </div>
       </div>
