cambio de datos bancarios

--- a/index.html
+++ b/index.html
@@ -298,22 +298,19 @@
           
           <!-- Contenido del modal -->
           <div class="modal-body">
-              <p>Nombre del Titular: <br> <span id="textToCopy1">Facundo Gabriel Fernández</span> <button class="btn btn-primary btn-copy" data-clipboard-target="#textToCopy1">
+              <p>Nombre del Titular: <br> <span id="textToCopy1">Leonela Daniela Mars</span> <button class="btn btn-primary btn-copy" data-clipboard-target="#textToCopy1">
                 <i class="fas fa-copy"></i> <!-- Icono de copiar -->
             </button></p>
-            <p>CBU: <br> <span id="textToCopy2">1500054100030014636382</span> <button class="btn btn-primary btn-copy" data-clipboard-target="#textToCopy2">
+            <p>CVU: <br> <span id="textToCopy2">0000003100091166604890</span> <button class="btn btn-primary btn-copy" data-clipboard-target="#textToCopy2">
               <i class="fas fa-copy"></i> <!-- Icono de copiar -->
           </button></p>
-          <p>ALIAS: <br> <span id="textToCopy3">NUEZ.PIANO.TRUCO</span> <button class="btn btn-primary btn-copy" data-clipboard-target="#textToCopy3">
+          <p>ALIAS: <br> <span id="textToCopy3">boda.danifacu</span> <button class="btn btn-primary btn-copy" data-clipboard-target="#textToCopy3">
             <i class="fas fa-copy"></i> <!-- Icono de copiar -->
           </button></p>
-          <p>DNI: <br> <span id="textToCopy4">35.273.608</span> <button class="btn btn-primary btn-copy" data-clipboard-target="#textToCopy4">
+          <p>CUIT/CUIL: <br> <span id="textToCopy4">23360856844</span> <button class="btn btn-primary btn-copy" data-clipboard-target="#textToCopy4">
             <i class="fas fa-copy"></i> <!-- Icono de copiar -->
           </button></p>
-          <p>NRO CUENTA: <br> <span id="textToCopy5">3001463638</span> <button class="btn btn-primary btn-copy" data-clipboard-target="#textToCopy5">
-            <i class="fas fa-copy"></i> <!-- Icono de copiar -->
-          </button></p>
-          <p>BANCO HSBC</p>
+          <p>Mercado Pago</p>
 
 
 
